--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Google font Josefin Slab -->
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap" rel="stylesheet">
+    <!-- Google font Dancing Script -->
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+
+    <!-- Google font Satisfy -->
+    <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
