--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="viewport" content ="width=device-width,initial-scale=1,user-scalable=yes" />
 
     <!-- Google font Josefin Slab -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab&display=swap" rel="stylesheet">
